--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,8 @@
             </div>
         </header>
 
+        <div id="top_btn">↑</div>
+
         <main></main>
             
         <footer>
