--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <!-- local css -->
     <link rel="stylesheet" href="/CSS/index.css">
 </head>
 <body>
@@ -40,9 +41,7 @@
 
         <main></main>
             
-        <footer>
-            <p>COPYRIGHT © 2021 台北一日遊</p>
-        </footer>
+        <footer>COPYRIGHT © 2022 台北一日遊</footer>
     </div>
 
     <script src="/JS/index.js"></script>
