--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -9,19 +9,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <!-- local css -->
     <link rel="stylesheet" href="/CSS/attraction.css">
+    <link rel="stylesheet" href="/CSS/login.css">
+
 </head>
 <body>
     <div id="root">
+        <div class="overlay"></div>
         <nav>
             <div class="top_link">
                 <h1><a href="/">台北一日遊</a></h1>
                 <div class="link">
-                    <a href="/">預定行程</a>
-                    <a href="/">登入註冊</a>
+                    <div class="top_link_booking">預定行程</div>
+                    <div class="top_link_login">登入/註冊</div>
                 </div>
             </div>
         </nav>
+
+        <div class="signIn">
+            <h2 class="signIn_title">登入會員帳號</h2>
+            <img class="login_icon_close" src="/images/icon_close.png" alt="">
+            <input class="signIn_email" type="email" placeholder="輸入電子信箱">
+            <input class="signIn_password" type="password" placeholder="輸入密碼">
+            <button class="signIn_button">登入帳戶</button>
+            <div class="signIn_message">還沒有帳戶？點此註冊</div>
+        </div>
+
+        <div class="signUp">
+            <h2 class="signUp_title">註冊會員帳號</h2>
+            <img class="login_icon_close" src="/images/icon_close.png" alt="">
+            <input class="signUp_name" type="text" placeholder="請輸入姓名">
+            <input class="signUp_email" type="email" placeholder="輸入電子信箱">
+            <input class="signUp_password" type="password" placeholder="輸入密碼">
+            <button class="signUp_button">註冊新帳戶</button>
+            <div class="signUp_message">已經有帳戶了？點此登入</div>
+        </div>
 
         <div id="top_btn">↑</div>
 
@@ -98,5 +121,6 @@
     </div>
 
     <script src="/JS/attraction.js"></script>
+    <script src="/JS/login.js"></script>
 </body>
 </html>
