--- a/static/CSS/index.css
+++ b/static/CSS/index.css
@@ -316,7 +316,7 @@ footer{
   main{
     width: 900px;
     grid-template-columns: repeat(3, 270px);
-    grid-template-rows: repeat(4, 242px);
+    /* grid-template-rows: repeat(4, 242px); */
   }
 }
 
@@ -324,7 +324,7 @@ footer{
   main{
     width: 600px;
     grid-template-columns: repeat(2, 270px);
-    grid-template-rows: repeat(6, 242px);
+    /* grid-template-rows: repeat(6, 242px); */
   }
 }
 
@@ -349,7 +349,7 @@ footer{
   main{
     width: 360px;
     grid-template-columns: repeat(1, 322px);
-    grid-template-rows: repeat(12, 280px);
+    /* grid-template-rows: repeat(12, 280px); */
 
     gap: 15px;
     margin: 30px auto;
