--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,9 @@
         <div class="signIn">
             <h2 class="signIn_title">登入會員帳號</h2>
             <img class="login_icon_close" src="/images/icon_close.png" alt="">
-            <input class="signIn_input signIn_email" type="email" name="email" placeholder="輸入電子信箱">
+            <input class="signIn_input signIn_email" type="email" name="email" placeholder="請輸入電子信箱">
             <div class="signIn_email_message"></div>
-            <input class="signIn_input signIn_password" type="password" name="password" placeholder="輸入密碼 (須介於6-10個字元)">
+            <input class="signIn_input signIn_password" type="password" name="password" placeholder="請輸入密碼 (須介於6-10個字元)">
             <div class="signIn_password_message"></div>
             <button class="signIn_button" disabled>登入帳戶</button>
             <div class="signIn_response_message"></div>
