feature: nav-sidebar

--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -6,7 +6,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="/CSS/attraction.css">
-    <link rel="stylesheet" href="/CSS/login.css">
+    <link rel="stylesheet" href="/CSS/base.css">
 {% endblock css %}
 {% block content %}
     <main>
