--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,17 @@
                 <div class="link">
                     <div class="top_link_booking">預定行程</div>
                     <div class="top_link_login">登入/註冊</div>
-                    <div class="top_link_logout">登出系統</div>
+                    <div class="top_name"></div>
+                    <div class="top_link_logout">登出</div>
+                </div>
+                <div class="side_navbar">
+                    <img class="side_logo" src="/images/hamburger.svg" alt="">
+                    <div class="side_link">
+                        <div class="side_name"></div>
+                        <div class="side_link_booking">預定行程</div>
+                        <div class="side_link_login">登入/註冊</div>
+                        <div class="side_link_logout"></div>
+                    </div>
                 </div>
             </div>
         </nav>
