--- a/static/CSS/attraction.css
+++ b/static/CSS/attraction.css
@@ -1,106 +1,15 @@
 :root {
-    --green: #448899;
-    --light_green: rgba(68, 136, 153, 0.5);
-    --deep_gray: #666666;
-    --light_gray: #757575;
     --white: #fff;
-    --black: #000;
-    --black_translucent:rgba(15, 14, 14, 0.6);
-    --bookingForm_bgc: #E8E8E8;
-    --shadow: 0 3px 5px rgba(104, 104, 104, 0.8);
-}
+    --deep_gray: #666666;
+    --green: #448899;
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Noto Sans TC';
+    --arrow_shadow: 0 3px 5px rgba(104, 104, 104, 0.8);
+    --bookingForm_bgc: #E8E8E8;
 }
 
 #root{
     display: grid;
     grid-template-rows: 54px auto;
-}
-
-nav{
-    display: grid;
-    grid-template-columns: auto minmax(300px, 1200px) auto;
-
-
-    position: sticky;
-    top: 0;
-    z-index: 5;
-
-    background-color: var(--white);
-    box-shadow: var(--shadow);
-}
-
-nav > .top_link{
-    grid-column: 2/3;
-
-    display: grid;
-    grid-template-columns: 160px auto;
-    align-items: center;
-}
-
-nav > .top_link > h1{
-    font-size: 30px;
-
-    margin-left: 10px;
-}
-
-nav > .top_link > h1 > a{
-    text-decoration: none;
-    color: var(--green);
-}
-
-nav > .top_link > .link{
-    justify-self: end;
-    display: flex;
-    padding: 10px 0px;
-}
-
-nav > .top_link > .link > .top_link_booking, .top_link_login, .top_link_logout{
-    color: var(--deep_gray);
-    cursor: pointer;
-  
-    margin: 0 6px;
-}
-
-nav > .top_link > h1 > a:hover{
-    color: var(--light_green);
-}
-
-nav > .top_link > .link > .top_link_booking:hover, .top_link_login:hover, .top_link_logout:hover{
-    color: var(--light_green);
-}
-
-nav > .top_link > .link > .top_link_logout{
-    display: none;
-}
-
-#top_btn{
-    display: none;
-
-    position: fixed;
-    right: 15px;
-    bottom: 50px;
-    z-index: 10;
-
-    background-color: var(--white);
-    color: var(--light_green);
-    border: 4px solid var(--light_green);
-
-    cursor: pointer;
-    font-size: 25px;
-
-    padding: 5px 12px;
-    border-radius: 50%;
-}
-
-#top_btn:hover{
-    color: var(--green);
-    border: 4px solid var(--green);
 }
 
 main{
@@ -173,7 +82,7 @@ main > .top > .left > .arrowAll > .prev > .leftArrow, .next > .rightArrow{
 }
 
 main > .top > .left > .arrowAll > .prev > .leftArrow:hover, .next > .rightArrow:hover{
-    box-shadow: var(--shadow);
+    box-shadow: var(--arrow_shadow);
 }
 
 main > .top > .left > .dotAll{
@@ -274,6 +183,8 @@ main > .top > .right > .bookingForm > .bookingBtn{
 
 main > .bottom{
     padding: 0 10px;
+    text-align: justify;
+    letter-spacing: 4px;
 }
 
 main > .bottom > .line{
@@ -285,7 +196,7 @@ main > .bottom > .line{
 main > .bottom > .description, .address, .direction{
     padding: 10px 10px 20px 10px;
     color: var(--deep_gray);
-    line-height: 23.17px;
+    line-height: 25px;
 }
 
 main > .bottom > .map{
@@ -294,18 +205,6 @@ main > .bottom > .map{
 }
 
 .addressTitle, .directionTitle{
-    font-weight: bold;
-}
-
-footer{
-    background: var(--light_gray);
-    height: 104px;
-
-    display: grid;
-    align-items: center;
-    justify-content: center;
-
-    color: var(--white);
     font-weight: bold;
 }
 
