--- a/static/CSS/index.css
+++ b/static/CSS/index.css
@@ -1,85 +1,23 @@
 :root {
+  --white: #fff;
+  --black: #000;
+  --black_translucent:rgba(15, 14, 14, 0.6);
+
+  --light_gray: #757575;
   --green: #448899;
   --light_green: rgba(68, 136, 153, 0.5);
-  --deep_gray: #666666;
-  --light_gray: #757575;
-  --white: #fff;
-  --black_translucent:rgba(15, 14, 14, 0.6);
-  --black: #000;
-  --category_bgc: #E8E8E8;
-  --categoryList_shadow:  0px 0px 20px #AABBCC;
-  --attractionInfo_border: 1px solid #E8E8E8;
-  --shadow: 0 3px 5px rgba(104, 104, 104, 0.8);
-}
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Noto Sans TC';
+  --categoryList_shadow:  0px 0px 20px #AABBCC;
+  --category_bgc: #E8E8E8;
+
+  --attractionInfo_shadow: 0 3px 5px rgba(104, 104, 104, 0.8);
+  --attractionInfo_border: 1px solid #E8E8E8;
 }
 
 #root{
   display: grid;
   grid-template-rows: 54px 320px auto;
   position: relative;
-}
-
-nav{
-  display: grid;
-  grid-template-columns: auto minmax(300px, 1200px) auto;
-
-
-  position: sticky;
-  top: 0;
-  z-index: 5;
-
-  background-color: var(--white);
-  box-shadow: var(--shadow);
-}
-
-nav > .top_link{
-  grid-column: 2/3;
-
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-}
-
-nav > .top_link > h1{
-  font-size: 30px;
-
-  margin-left: 10px;
-}
-
-nav > .top_link > h1 > a{
-  text-decoration: none;
-  color: var(--green);
-}
-
-nav > .top_link > .link{
-  justify-self: end;
-  display: flex;
-  padding: 10px;
-}
-
-nav > .top_link > .link > .top_link_booking, .top_link_login, .top_link_logout{
-  color: var(--deep_gray);
-  cursor: pointer;
-
-  margin: 0 6px;
-}
-
-nav > .top_link > h1 > a:hover{
-  color: var(--light_green);
-}
-
-nav > .top_link > .link > .top_link_booking:hover, .top_link_login:hover, .top_link_logout:hover{
-  color: var(--light_green);
-}
-
-nav > .top_link > .link > .top_link_logout{
-  display: none;
 }
 
 header{
@@ -207,30 +145,6 @@ header > .slogan_search > .category_list > .category:hover{
   background-color: var(--category_bgc);
 }
 
-#top_btn{
-  display: none;
-
-  position: fixed;
-  right: 15px;
-  bottom: 50px;
-  z-index: 10;
-
-  background-color: var(--white);
-  color: var(--light_green);
-  border: 4px solid var(--light_green);
-
-  cursor: pointer;
-  font-size: 25px;
-
-  padding: 5px 12px;
-  border-radius: 50%;
-}
-
-#top_btn:hover{
-  color: var(--green);
-  border: 4px solid var(--green);
-}
-
 main{
   width: 1200px;
   
@@ -253,7 +167,7 @@ main > .attraction{
 }
 
 main > .attraction:hover{
-  box-shadow: var(--shadow);
+  box-shadow: var(--attractionInfo_shadow);
 }
 
 main > .attraction > .attraction_name{
