--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="/CSS/index.css">
-    <link rel="stylesheet" href="/CSS/login.css">
+    <link rel="stylesheet" href="/CSS/base.css">
 {% endblock css %}
 {% block content %}
     <header>
