feature: loading page

--- a/static/CSS/base.css
+++ b/static/CSS/base.css
@@ -20,6 +20,71 @@
     font-family: 'Noto Sans TC';
 }
 
+/* loading page */
+.container{
+    background-color: var(--green);
+    min-width: 100%;
+    min-height: 100vh;
+
+    position: fixed;
+    z-index: 50;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.text{
+    color: var(--white);
+    letter-spacing: 2px;
+}
+
+.loading{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 20px;
+}
+
+.loading > .line_box{
+    padding: 2px;
+    width: 40%;
+    border:  2px solid var(--white);
+    border-radius: 20px;
+}
+
+.loading > .line_box > .line{
+    height: 20px;
+    background-color: var(--white);
+    border-radius: 20px;
+    animation: loading 2s forwards infinite cubic-bezier(0,0,0,0);
+}
+
+@keyframes loading{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 100%;
+    }
+}
+
+.disappear{
+    animation: vanish 0.5s forwards;
+}
+
+@keyframes vanish {
+    100%{
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+
 /* ----- nav ----- */
 nav{
     display: grid;
